# aggregator

./: Dockerfile  README.md  pyproject.toml
src/aggregator/: aggregator.py  main.py  metrics.py  service.py  storage.py  vabus.py
src/tests/: test_aggregator.py  test_metrics.py  test_storage.py  test_vabus.py
